--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,29 @@
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two newlines
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.Spotlight-V100
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
