--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +%s)"
       - name: Build the Docker image
-        run: docker build . --file Dockerfile  --tag ghcr.io/STEM-klubben/goones:${{ steps.date.outputs.date }}
+        run: docker build . --file Dockerfile  --tag ghcr.io/stem-klubben/goones:${{ steps.date.outputs.date }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -27,7 +27,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push the Docker image to the GitHub registry
-        run: docker push ghcr.io/replace-me-org/replace-me-image-name:${{ steps.date.outputs.date }}
+        run: docker push ghcr.io/stem-klubben/goones:${{ steps.date.outputs.date }}
 
   deploy:
     runs-on: ubuntu-latest
