--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,10 @@ on:
 jobs:
   build-push-image:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      packages: write
+    
     outputs:
       date: ${{ steps.date.outputs.date }}
 
