--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh goonesdeploy@goones.se "cd /var/www/se/goones && sed -i 's/^DOCKER_TAG=.*/DOCKER_TAG=${{ needs.build-push-image.outputs.date }}/' .env && docker compose up -d"
+          ssh goonesdeploy@goones.se "cd /var/www/se/goones && (echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin) && sed -i 's/^DOCKER_TAG=.*/DOCKER_TAG=${{ needs.build-push-image.outputs.date }}/' .env && docker compose up -d"
