Final github workflow

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,13 +1,15 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    types:
+      - closed
+    branches:
+      - main
 
 jobs:
   build-push-image:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-24.04-arm
     permissions:
       contents: read
