--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - id: lower-repo
+        name: Repository to lowercase
+        run: |
+          echo "repository=${GITHUB_REPOSITORY@L}" >> $GITHUB_OUTPUT
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -21,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
+          tags: ghcr.io/${{ steps.lower-repo.outputs.repository }}:${{ github.sha }}
 
   deploy:
     name: Deploy to Kubernetes
@@ -29,6 +34,11 @@ jobs:
     needs: build
 
     steps:
+      - id: lower-repo
+        name: Repository to lowercase
+        run: |
+          echo "repository=${GITHUB_REPOSITORY@L}" >> $GITHUB_OUTPUT
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -56,5 +66,5 @@ jobs:
           --install \
           --create-namespace \
           --namespace ${{ github.event.repository.name }} \
-          --set image=ghcr.io/${{ github.repository }}:${{ github.sha }} \
+          --set image=ghcr.io/${{ steps.lower-repo.outputs.repository }}:${{ github.sha }} \
           --set dockerConfigJson.data="\{\"auths\":\{\"ghcr.io\":\{\"username\":\"${{ secrets.GHCR_USER }}\"\,\"password\":\"${{ secrets.GHCR_PAT }}\"\}\}\}"
