--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04-arm
     permissions:
       contents: read
       packages: write
@@ -17,6 +17,9 @@ jobs:
         name: Repository to lowercase
         run: |
           echo "repository=${GITHUB_REPOSITORY@L}" >> $GITHUB_OUTPUT
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -29,11 +32,12 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ghcr.io/${{ steps.lower-repo.outputs.repository }}:${{ github.sha }}
 
   deploy:
     name: Deploy to Kubernetes
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04-arm
     needs: build
 
     steps:
