--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -62,10 +62,14 @@ jobs:
             tags: tag:ci
 
       - name: Configure Kubeconfig
+        id: set-context
         uses: azure/k8s-set-context@v4
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBECONFIG }}
+
+      - name: Test kubectl
+        run: kubectl get ns¨
 
       - name: Deploy the Helm chart
         run: |
