--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -2,11 +2,11 @@ on:
   push:
     branches:
       - main
-      - k8s-deploy
   workflow_dispatch:
 
 jobs:
   build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-22.04-arm
     permissions:
       contents: read
@@ -36,6 +36,8 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/${{ steps.lower-repo.outputs.repository }}:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
     name: Deploy to Kubernetes
@@ -67,9 +69,6 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBECONFIG }}
-
-      - name: Test kubectl
-        run: kubectl get ns¨
 
       - name: Deploy the Helm chart
         run: |
