--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Namespace }}
   namespace: {{ .Release.Namespace }}
 spec:
-  replicas: 3
+  replicas: {{ .Values.replicas | default 1 }}
   strategy:
     type: RollingUpdate
     rollingUpdate:
