--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -59,9 +59,8 @@ jobs:
       - name: Tailscale
         uses: tailscale/github-action@v3
         with:
-            oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_KEY }}
-            oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-            tags: tag:ci
+          authkey: ${{ secrets.TS_AUTH }}
+          statedir: /tmp/tailscale-state/
 
       - name: Configure Kubeconfig
         id: set-context
